<resources>
    <string name="app_name">Помянник</string>
    <string name="heading">Заголовок</string>
    <string name="lists">Списки</string>
    <string name="prayers">Молитвы</string>
    <string name="information">Информация</string>
    <string name="for_the_health">О здравии</string>
    <string name="for_the_repose">Об упокоении</string>
    <string name="no_lists_added">Вы не добавили списки</string>
    <string name="new_list">Новый список %1s</string>
    <string name="list_title">Название списка</string>
    <string name="you_can_add_10_names">Вы можете добавить до 10 имён в один список</string>
    <string name="add_name">Добавить имя</string>
    <string name="added_n_of_ten">Добавлено %1s из 10</string>
    <string name="save">Сохранить</string>
    <string name="field_required">Обязательно</string>
    <string name="names">Имена</string>
    <string name="name">Имя</string>
    <string name="dignity_description">Cан/описание</string>
    <string name="choose_name">Выберите имя</string>
    <string name="choose_dignity_helper">Выберите определение из списка, либо оставьте поле пустым</string>
    <string name="choose_name_helper">Выберите имя из списка</string>
    <string name="no_such_name_in_db">Такого имени нет в базе приложения. Вы можете самостоятельно добавить его</string>
    <string name="close">Закрыть</string>
    <string name="exit">Выйти</string>
    <string name="cancel">Отмена</string>
    <string name="are_you_sure_you_want_to_leave">Вы уверены, что хотите выйти? Все несохраненные данные будут потеряны.</string>
    <string name="add_name_to_db">Добавить имя в базу</string>
    <string name="name_in_nominative">Имя в именительном падеже</string>
    <string name="name_nominative_helper">Пример: Кто? - Иоанн</string>
    <string name="name_in_genitive">Имя в родительном падеже</string>
    <string name="name_genitive_helper">Пример: Нет кого? - Иоанна</string>
    <string name="name_in_dative">Имя в дательном падеже</string>
    <string name="name_dative_helper">Пример: Кому? - Иоанну</string>
    <string name="name_in_accusative">Имя в винительном падеже</string>
    <string name="name_accusative_helper">Пример: Вижу кого? - Иоанна</string>
    <string name="name_in_instrumental">Имя в творительном падеже</string>
    <string name="name_instrumental_helper">Пример: Кем? - Иоанном</string>
    <string name="name_in_prepositional">Имя в предложном падеже</string>
    <string name="name_prepositional_helper">Пример: О ком? - Иоанне</string>
    <string name="list">Список %1s</string>
    <string name="delete">Удалить</string>
    <string name="are_you_sure_you_want_to_delete_list_x">Вы уверены, что хотите удалить список \"%1s\"?</string>
    <string name="are_you_sure_you_want_to_delete_person_x">Вы уверены, что хотите удалить \"%1s\"?</string>
    <string name="edit">Редактировать</string>
    <string name="edit_list">Редактировать список</string>
    <string name="names_insert"><i>(имена)</i></string>
    <string name="patriarh_gen">Кирилла</string>
    <string name="no_data_available">Данные отсутствуют</string>
    <string name="categories">Категории</string>
    <string name="prayer">Молитва</string>
    <string name="names_insertion">Добавление имен</string>
    <string name="you_can_add_names_into_prayer">Вы можете добавить в текст молитвы имена или готовые списки. Для этого воспользуйтесь кнопками ниже. Либо сразу переходите к молитве.</string>
    <string name="add_list">Добавить список</string>
    <string name="to_the_prayer">К молитве</string>
    <string name="no_names_added">Вы не добавили имена</string>
    <string name="you_have_not_added_names">Вы не добавили имена. Перейти к молитве?</string>
    <string name="navigate_to_prayer">Перейти к молитве?</string>
    <string name="to_prayer">К молитве</string>
    <string name="listing_selection_for_prayer">Выбор списков для молитвы</string>
    <string name="choose_lists_to_add_into_prayer">Выберите списки для вставки в текст молитвы:</string>
    <string name="choose">Выбрать</string>
    <string name="no_available_lists">Нет доступных списков</string>
    <string name="are_you_sure_you_want_to_close_prayer">Вы уверены, что хотите закрыть молитву"?</string>
    <string name="imyarek">(имярек)</string>
    <string name="pomyannik_add_duh_otets">Помянник. Духовный отец</string>
    <string name="you_can_add_duh_otets_into_prayer">Вы можете добавить в текст Помянника имя духовного отца. Для этого воспользуйтесь кнопками ниже. Либо переходите далее.</string>
    <string name="next">Далее</string>
    <string name="pomyannik_add_parents">Помянник. Родители</string>
    <string name="you_can_add_parents_into_prayer">Вы можете добавить в текст Помянника имена родителей. Для этого воспользуйтесь кнопками ниже. Либо переходите далее.</string>
    <string name="you_have_not_added_names_go_ahead">Вы не добавили имена. Перейти далее?</string>
    <string name="navigate_forward">Перейти далее?</string>
    <string name="pomyannik_add_relatives">Помянник. Сродники</string>
    <string name="you_can_add_relatives_into_prayer">Вы можете добавить в текст Помянника имена сродников. Для этого воспользуйтесь кнопками ниже. Либо переходите далее.</string>
    <string name="pomyannik_add_friends">Помянник. Други</string>
    <string name="you_can_add_friends_into_prayer">Вы можете добавить в текст Помянника имена друзей и близких людей. Для этого воспользуйтесь кнопками ниже. Либо переходите далее.</string>
    <string name="pomyannik_add_usop_relatives">Помянник. Усопшие сродники</string>
    <string name="you_can_add_usop_relatives_into_prayer">Вы можете добавить в текст Помянника имена усопших родителей и сродников. Для этого воспользуйтесь кнопками ниже. Либо переходите далее.</string>
    <string name="are_you_sure_you_want_to_close_app">Вы уверены, что хотите закрыть приложение и выйти"?</string>
    <string name="pamyatka_o_podache_zapisok">Пямятка о подаче записок</string>
    <string name="postanovlenie_ob_imenah">Постановление об именах</string>
    <string name="pozhertvovaniya">Пожертвования</string>
    <string name="app_info">Приложение %1s\nВерсия %2s\nРазработал Евстигнеев С.Ю.</string>
    <string name="article_title">Заголовок статьи</string>
    <string name="article_text">Текст статьи</string>
    <string name="settings">Настройки</string>
    <string name="choose_theme">Выберите тему:</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="system_theme">Как в системе</string>
    <string name="names_added_by_user">Имена, добавленные пользователем</string>
    <string name="added_names">Добавленные имена</string>
    <string name="you_can_add_custom_names">Здесь Вы можете добавить имена, которых нет в базе приложения.</string>
    <string name="edit_name">Редактировать имя</string>
    <string name="update">Обновить</string>
    <string name="share_list_as_text">Отправить список в виде текста</string>
    <string name="share_list_as_image">Отправить список в виде изображения</string>
    <string name="save_list_as_image">Сохранить список в виде изображения</string>
    <string name="image_saved">Изображение сохранено</string>
    <string name="image_saving_failure">Ошибка сохранения</string>
    <string name="version_n">Версия: %1s</string>
    <string name="provide_permissions">Предоставьте приложению доступ к памяти в настройках вашего устройства</string>


</resources>