<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".addname.ui.AddNameFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/add_name_to_db" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNom"
        style="@style/InputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/name_nominative_helper"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutGen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNom"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_in_nominative"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGen"
        style="@style/InputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/name_genitive_helper"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutDat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextGen"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_in_genitive"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDat"
        style="@style/InputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/name_dative_helper"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDat"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_in_dative"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAcc"
        style="@style/InputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/name_accusative_helper"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutInst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAcc"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_in_accusative"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutInst"
        style="@style/InputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/name_instrumental_helper"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPrep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAcc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInst"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_in_instrumental"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPrep"
        style="@style/InputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:helperText="@string/name_prepositional_helper"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutInst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPrep"
            style="@style/EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_in_prepositional"
            android:inputType="textCapWords|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24dp"
        android:enabled="false"
        android:text="@string/save"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>